fix: css parser error (safe utility class names)

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,16 +123,17 @@ h4 {
   .perspective-1000 {
     perspective: 1000px;
   }
-  .rotate-y-[-10deg] {
+  /* Avoid bracketed class names in CSS selectors (Turbopack CSS parser). */
+  .rotate-y-neg-10 {
     transform: rotateY(-10deg);
   }
-  .rotate-x-[5deg] {
+  .rotate-x-5 {
     transform: rotateX(5deg);
   }
-  .hover\:rotate-y-[-5deg]:hover {
+  .hover-rotate-y-neg-5:hover {
     transform: rotateY(-5deg);
   }
-  .hover\:rotate-x-[2deg]:hover {
+  .hover-rotate-x-2:hover {
     transform: rotateX(2deg);
   }
 }
